// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`правильно рисует компонент второго типа 1`] = `
<Connect(InfoBubbleDumb)
  className="CardVasMotivator CardVasMotivator_type_2"
  cookieSettings={
    Object {
      "expires": 2,
      "name": "vas-motivator-closed",
    }
  }
  theme="yellow"
  title="Это объявление популярнее, чем ваше"
  withCloser={true}
>
  <div
    className="CardVasMotivator__compare"
  >
    <div
      className="CardVasMotivator__compareItem"
    >
      <div
        className="CardVasMotivator__compareNumber"
      >
        3769
      </div>
      <div
        className="CardVasMotivator__compareText"
      >
        человек искало эту модель сегодня
      </div>
    </div>
    <div
      className="CardVasMotivator__compareItem"
    >
      <div
        className="CardVasMotivator__compareNumber"
      >
        105
      </div>
      <div
        className="CardVasMotivator__compareText"
      >
        человек посмотрели это объявление
      </div>
    </div>
  </div>
  <Button
    color="green"
    onClick={[Function]}
    size="l"
    target="_blank"
    type="link"
    url="link/sales/?category=cars"
    width="default"
  >
    Выбрать опцию для продвижения
  </Button>
</Connect(InfoBubbleDumb)>
`;

exports[`правильно рисует компонент первого типа 1`] = `
<Connect(InfoBubbleDumb)
  className="CardVasMotivator CardVasMotivator_type_1"
  cookieSettings={
    Object {
      "expires": 2,
      "name": "vas-motivator-closed",
    }
  }
  theme="blue"
  title="Это объявление популярнее, чем ваше"
  withCloser={true}
>
  <div
    className="CardVasMotivator__tagLine"
  >
    3769
     человек искало эту модель сегодня
  </div>
  <div
    className="CardVasMotivator__compare"
  >
    <div
      className="CardVasMotivator__compareItem"
    >
      <div
        className="CardVasMotivator__compareNumber"
      >
        105
      </div>
      <div
        className="CardVasMotivator__compareText"
      >
        человек посмотрели это объявление
      </div>
    </div>
    <Svg
      className="CardVasMotivator__compareSymbol"
      src="svgID"
    />
    <div
      className="CardVasMotivator__compareItem"
    >
      <div
        className="CardVasMotivator__compareNumber"
      >
        15
      </div>
      <div
        className="CardVasMotivator__compareText"
      >
        человек посмотрели ваше объявление
      </div>
    </div>
  </div>
  <Button
    color="green"
    onClick={[Function]}
    size="l"
    target="_blank"
    type="link"
    url="link/sales/?category=cars"
    width="default"
  >
    Выбрать опцию для продвижения
  </Button>
</Connect(InfoBubbleDumb)>
`;
